<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minecraft Launcher</string>
    <string name="launch_game">Launch Game</string>
    <string name="settings">Settings</string>
    <string name="select_version">Select Minecraft Version</string>
    <string name="status_loading">Loading...</string>
    <string name="download_version">Download Version</string>
    
    <!-- Settings -->
    <string name="pref_category_general">General</string>
    <string name="pref_category_graphics">Graphics</string>
    <string name="pref_category_controls">Controls</string>
    
    <string name="pref_username_title">Username</string>
    <string name="pref_username_summary">Enter your Minecraft username</string>
    
    <string name="pref_render_distance_title">Render Distance</string>
    <string name="pref_render_distance_summary">Number of chunks to render</string>
    
    <string name="pref_fps_limit_title">FPS Limit</string>
    <string name="pref_fps_limit_summary">Maximum frames per second</string>
    
    <string name="pref_touch_sensitivity_title">Touch Sensitivity</string>
    <string name="pref_touch_sensitivity_summary">Camera rotation sensitivity</string>
    
    <string name="pref_fullscreen_title">Fullscreen Mode</string>
    <string name="pref_fullscreen_summary">Run game in fullscreen</string>
    
    <!-- Messages -->
    <string name="version_download_complete">Version downloaded successfully</string>
    <string name="version_download_failed">Failed to download version</string>
    <string name="game_launch_failed">Failed to launch game</string>
    <string name="permission_required">Storage permission required</string>
    
    <!-- Default values -->
    <string name="default_username">Player</string>
</resources>